--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,11 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0-alpha1'
     implementation 'com.google.firebase:firebase-core:16.0.0'
     implementation 'com.google.firebase:firebase-auth:16.0.2'
-    implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.firebase:firebase-firestore:17.0.4'
 
 
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    implementation 'com.android.support:gridlayout-v7:28.0.0-alpha1'
 }
 apply plugin: 'com.google.gms.google-services'
